[package]
name = "waku-bindings"
version = "1.0.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>",
    "Richard Ramos <richard@waku.org>",
    "Ivan Folgueira Bande <ivansete@status.im>"
]
description = "Waku networking library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/waku-org/waku-rust-bindings"
keywords = ["waku", "peer-to-peer", "libp2p", "networking"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
chrono = "0.4"
enr = { version = "0.13", features = ["serde", "rust-secp256k1"] }
hex = "0.4"
libc = "0.2"
multiaddr = "0.18"
once_cell = "1"
rand = "0.9"
regex = "1"
rln = "0.8"
secp256k1 = { version = "0.31", features = ["rand", "recovery", "serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sscanf = "0.4"
smart-default = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = [] }
url = "2"
uuid = { version = "1", features = ["v4"] }
waku-sys = { version = "1", path = "../waku-sys" }

[dev-dependencies]
futures = "0.3"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
